bubble overlap and project names while few space fixed

--- a/src/app/components/userreports/userreports.component.scss
+++ b/src/app/components/userreports/userreports.component.scss
@@ -1,3 +1,8 @@
+.body {
+  width: 100%;
+  height: 100%;
+}
+
 mat-card {
   margin: 5px 0 0 0;
 }
@@ -84,7 +89,6 @@ a {
 }
 .hoBu:after {
   right: 0;
-  left: 0;
 }
 .hoBu1:after {
   right: -90%;
